feat(api): added OTA reservations handler endpoint
